# flash-mvp-v1

./: .gitignore  ADDITIONAL_ISSUES_FOUND.md  ARCHITECTURE.md  ARCIUM_CONTACT_TEMPLATE.md  ARCIUM_ENDPOINT_EXPLANATION.md  ARCIUM_INTEGRATION.md  ARCIUM_MXE_COMPLETE.md  ARCIUM_NODE_CACHE.json  ARCIUM_TESTNET_READINESS_REVIEW.md  Anchor.toml  Arcium.toml  BACKTEST_GUIDE.md  BACKTEST_RESULTS.md  BACKTEST_RESULTS_FINAL.md  BACKTEST_SUMMARY.md  BITCOIN_INTEGRATION.md  BTC_DEPOSIT_ARCHITECTURE.md  BTC_FLOW_REVIEW_AND_FIXES.md  BTC_RELAYER_CORRECTED_IMPLEMENTATION.md  BTC_RELAYER_REVIEW_AND_FIXES.md  BURN_OPERATION_CLARIFICATION.md  CHANGELOG.md  CLEAR_CACHE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  COMPLETE_SYSTEM_AUDIT.md  COMPREHENSIVE_AUDIT_ALL_ISSUES.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_DOUBLE_CHECK_REPORT.md  CONFIGURATION_COMPLETE.md  CONFIGURE_RELAYER_AND_MINT.md  CONFIG_READY_SUMMARY.md  CONTRIBUTING.md  CORE_SYSTEM_COMPLETE.md  CRASH_PREVENTION_README.md  CRITICAL_FIX_PLAN.md  DATABASE_LOCKING_IMPLEMENTATION.md  DEMO_CHECKLIST.md  ENV_EXAMPLE_BACKEND.txt  ENV_EXAMPLE_FRONTEND.txt  (+71 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
arcium-node-setup/: arcium-installer.sh  node-config.toml
backend/: .env.example  .env.test  API_DOCUMENTATION.md  ARCIUM_ENV_CONFIG.md  ARCIUM_INTEGRATION.md  BTC_DEPOSIT_TRACKING.md  CRITICAL_FIXES_TODO.md  DATABASE_SETUP.md  DEPOSIT_MONITORING.md  Dockerfile  QUICK_SETUP.md  (+44 more)
flash-bridge-mxe/programs/src/: Cargo.toml  lib.rs  {
programs/zenz_bridge/: Cargo.toml  README.md
programs/zenz_bridge/src/: lib.rs
(+156 files in other folders)
