[package]
name = "zenz_bridge"
version = "0.1.0"
description = "Zenz Bridge - Flash MVP Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zenz_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
arcium = ["arcium-anchor"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["associated-token"] }
arcium-anchor = { version = "0.4.0", optional = true }
