[package]
name = "flash_bridge_mxe"
version = "0.1.0"
description = "FLASH Bridge MXE - Custom Arcium MPC program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_bridge_mxe"
path = "lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"



